[package]
edition = "2018"
name = "minesweeper"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "minesweeper-rs"
path = "src/main.rs"

[dependencies]
bevy_mod_picking = "0.4"
log = "0.4.14"
rand = "0.8.4"
wasm-bindgen = "0.2.69"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
